[project]
name = "swit-pubsub-client-splunk-py"
version = "0.0.1"
authors = [
  { name="Howard Jeong", email="howard.jeong@swit.io" },
]
description = "Swit PubSub Client for Splunk"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/switapi"
"Bug Tracker" = "https://github.com/switapi/issues"